# temporal-pattern

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: absence.rs  combination.rs  existence.rs  lib.rs  precedence.rs  response.rs  scope.rs
